Add Header Frame

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -27,3 +27,8 @@ input[type="text"], input[type="password"] {
     color: red;
     margin-top: 10px;
 }
+
+#app {
+    margin: 4px;
+    margin-top: 130px;
+}
