Add background color!!

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -32,3 +32,7 @@ input[type="text"], input[type="password"] {
     margin: 4px;
     margin-top: 130px;
 }
+
+body {
+    background-color: #FAFAFA;
+}
