--- a/app/src/style.css
+++ b/app/src/style.css
@@ -34,6 +34,17 @@ input[type="text"], input[type="password"] {
     border-radius: 4px;
 }
 
+textarea {
+    width: 280px;
+    height: 22vh;
+    background-color: #FFFFFF;
+    padding: 10px;
+    font-size: 16px;
+    margin: 4px 0;
+    border: 1px solid #E2E8F8;
+    border-radius: 4px;
+}
+
 .alert {
     color: red;
     margin-top: 10px;
