Button Text Centering in Auth view

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -9,6 +9,9 @@
     width: 270px;
     height: 70px;
     border-radius: 16px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
 .btn:hover {
     background-color: #0056b3;
