--- a/app/src/style.css
+++ b/app/src/style.css
@@ -75,6 +75,10 @@ input[type="text"], input[type="password"], .selectbox {
     align-items: center;       /* 上下中央揃え */
 }
 .squareBtn{
+    display: flex;               /* フレックスコンテナにする */
+    align-items: center;          /* 垂直方向の中央寄せ */
+    justify-content: center;      /* 水平方向の中央寄せ */
+    
     width: 30px;
     height: 30px;
     border-radius: 6px;
