--- a/app/src/style.css
+++ b/app/src/style.css
@@ -17,7 +17,7 @@
     background-color: #0056b3;
 }
 
-input[type="text"], input[type="password"], .selectbox {
+input[type="text"], input[type="password"],.selectbox {
     width: 80vw;
     background-color: #FFFFFF;
     padding-top: 10px;
@@ -27,6 +27,46 @@ input[type="text"], input[type="password"], .selectbox {
     border: 1px solid #E2E8F8;
     border-radius: 4px;
     box-sizing: border-box;
+}
+input[type="date"] {
+    width: 80vw;
+    background-color: #FFFFFF;
+    padding: 10px 12px;
+    font-size: 16px;
+    margin: 4px 0;
+    border: 1px solid #E2E8F8;
+    border-radius: 6px;
+    box-sizing: border-box;
+    color: #333;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    position: relative;
+    transition: border-color 0.2s, box-shadow 0.2s;
+}
+input[type="date"]:hover,
+input[type="date"]:focus {
+    border-color: #1C409A;
+    box-shadow: 0 0 0 2px #E2E8F8;
+    outline: none;
+}
+input[type="date"]::-webkit-input-placeholder {
+    color: #B0B0B0;
+}
+input[type="date"]::-moz-placeholder {
+    color: #B0B0B0;
+}
+input[type="date"]:-ms-input-placeholder {
+    color: #B0B0B0;
+}
+input[type="date"]::placeholder {
+    color: #B0B0B0;
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(0.4) sepia(1) saturate(5) hue-rotate(190deg);
+    cursor: pointer;
+    height: 22px;
+    width: 22px;
 }
 
 .alert {
@@ -103,7 +143,7 @@ body {
 
 #main {
     /*margin: 4px;*/
-    margin-top: 120px;
+    margin-top: 16px;
     padding: 4px;
     /*padding-top: 120px;*/
 }
