--- a/app/src/style.css
+++ b/app/src/style.css
@@ -143,7 +143,7 @@ body {
 
 #main {
     /*margin: 4px;*/
-    margin-top: 16px;
+    /*margin-top: 16px;*/
     padding: 4px;
     /*padding-top: 120px;*/
 }
