--- a/app/src/style.css
+++ b/app/src/style.css
@@ -69,6 +69,23 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     width: 22px;
 }
 
+input[type="time"] {
+    width: 40vw;
+    background-color: #FFFFFF;
+    padding: 10px 12px;
+    font-size: 16px;
+    margin: 4px 0;
+    border: 1px solid #E2E8F8;
+    border-radius: 6px;
+    box-sizing: border-box;
+    color: #333;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    position: relative;
+    transition: border-color 0.2s, box-shadow 0.2s;
+}
+
 .alert {
     color: red;
     margin-top: 10px;
