--- a/app/src/style.css
+++ b/app/src/style.css
@@ -154,6 +154,22 @@ input[type="time"] {
    background-color: #D9D9D9;
 }
 
+.mic {
+    width: 40px;
+    height: auto;
+    color: #AEB7BD
+}
+.micdiv {
+    display: flex;
+    align-items: center; /* 垂直方向の中央揃え */
+    justify-content: center; /* 水平方向の中央揃え */
+    margin-top: 8px;
+    margin-bottom: 8px;
+
+    position: relative;
+    left: 20px;
+}
+
 body {
     font-family: 'Noto Sans JP', sans-serif;
 }
