--- a/app/src/style.css
+++ b/app/src/style.css
@@ -164,11 +164,11 @@ input[type="time"] {
     position: relative;
     left: 20px;
 }
-
 #main {
     /*margin: 4px;*/
     /*margin-top: 16px;*/
-    padding: 4px;
+    padding-left: 4px;
+    padding-right: 4px;
     /*padding-top: 120px;*/
 }
 
