--- a/app/src/style.css
+++ b/app/src/style.css
@@ -198,3 +198,10 @@ summary {
     min-width: 0;     /* ←必須 */
     box-sizing: border-box; /* padding含めて幅を計算 */
 }
+
+.left-group {
+    display: flex;          /* 左グループを横並び */
+    align-items: center;
+    flex: 1;                /* 幅を伸ばす */
+    min-width: 0;           /* ←これが省略効かせるキモ */
+}
