Change Lists background color

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -93,7 +93,7 @@ input[type="time"] {
 }
 
 #List {
-    background-color: #1C409A;
+    background-color: #3d7fe0;
 
     padding-top: 3px;
     padding-bottom: 3px;
