--- a/app/src/style.css
+++ b/app/src/style.css
@@ -172,6 +172,11 @@ input[type="time"] {
 
 body {
     font-family: 'Noto Sans JP', sans-serif;
+    /*color: #121212;*/
+    /*color: #1C1C1C;*/
+    /*color: #333333;*/
+    color: #4d5161;
+    /*color: #000000;*/
     margin: 0;
     background-color: #FAFAFA;
 }
