--- a/app/src/style.css
+++ b/app/src/style.css
@@ -1,3 +1,10 @@
+:root {
+    --background-color: #FAFAFA;
+    --border-color: #e9e9e9;
+    --white-color: #FFFFFF;
+    --font-color: #4d5161;
+}
+
 .btn {
     background-color: #49A2E0;
     color: white;
@@ -20,19 +27,19 @@
 
 input[type="text"], input[type="password"],.selectbox {
     width: 80vw;
-    color: #4d5161;
-    background-color: #FFFFFF;
+    color: var(--font-color);
+    background-color: var(--white-color);
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 16px;
     margin: 4px 0;
-    border: 1px solid #E2E8F8;
+    border: 1px solid var(--border-color);
     border-radius: 4px;
     box-sizing: border-box;
 }
 input[type="date"] {
     width: 80vw;
-    background-color: #FFFFFF;
+    background-color: var(--white-color);
     padding: 4px 12px;
     font-size: 16px;
     margin: 4px 0;
@@ -73,17 +80,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 input[type="time"] {
     width: 40vw;
-    background-color: #FFFFFF;
+    background-color: var(--white-color);
     padding: 10px 12px;
     font-size: 16px;
     margin: 4px 0;
-    border: 1px solid #E2E8F8;
+    border: 1px solid var(--border-color);
     border-radius: 6px;
     box-sizing: border-box;
     color: #4d5161;
     appearance: none;
     -webkit-appearance: none;
-    -moz-appearance: none;
     position: relative;
     transition: border-color 0.2s, box-shadow 0.2s;
 }
@@ -94,7 +100,8 @@ input[type="time"] {
 }
 
 #List {
-    background-color: #3d7fe0;
+    /*background-color: #3d7fe0;*/
+    background-color: var(--background-color);
 
     padding-top: 3px;
     padding-bottom: 3px;
@@ -114,13 +121,15 @@ input[type="time"] {
     display: flex;
     justify-content: space-between; /* 左右に配置 */
     align-items: center;
-    background-color: #FFFFFF;
-    border: 2px solid white; /* 白い枠 */
+    border-top: 1px solid var(--border-color);
+    /*border-bottom: 1px solid var(--border-color);*/
+    background-color: var(--white-color);
+    /*border-radius: 4px; !* 角を丸く *!*/
 
-    margin: 4px 4px;
-    border-radius: 4px; /* 角を丸く */
+    padding: 4px 4px;
     font-size: 1rem;
 }
+
 .right {
     display: flex;
     justify-content: flex-end; /* 右寄せ */
@@ -176,10 +185,10 @@ body {
     /*color: #121212;*/
     /*color: #1C1C1C;*/
     /*color: #333333;*/
-    color: #4d5161;
+    color: var(--font-color);
     /*color: #000000;*/
     margin: 0;
-    background-color: #FAFAFA;
+    background-color: var(--background-color);
 }
 
 svg {
