--- a/app/src/style.css
+++ b/app/src/style.css
@@ -165,12 +165,12 @@ input[type="time"] {
 .micdiv {
     display: flex;
     align-items: center; /* 垂直方向の中央揃え */
-    justify-content: center; /* 水平方向の中央揃え */
+    /*justify-content: center; !* 水平方向の中央揃え *!*/
     margin-top: 8px;
     margin-bottom: 8px;
 
     position: relative;
-    left: 20px;
+    /*left: 20px;*/
 }
 #main {
     /*margin: 4px;*/
