Fix Adding ToDo UI

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -166,7 +166,7 @@ input[type="time"] {
     display: flex;
     align-items: center; /* 垂直方向の中央揃え */
     /*justify-content: center; !* 水平方向の中央揃え *!*/
-    margin-top: 8px;
+    /*margin-top: 8px;*/
     margin-bottom: 8px;
 
     position: relative;
